--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,7 +1,10 @@
 design/
 images/
 fonts/
-bootstrap.min/
-jquery.min/
-popper.min/
-slick.min/
+bootstrap.min.js
+bootstrap.min.js.map
+bootstrap.min.css
+bootstrap.min.css.map
+jquery.min.js
+popper.min.js
+slick.min.js
